# dynamodb-stream-to-grpc

./: .dockerignore  .gitignore  Dockerfile  README.md  cdk.json  package-lock.json  package.json
lambda/: put_item.py
lib/: dynamodb-stream-to-grpc-stack.ts
lib/constructs/: grpc-server.ts  index.ts
proto/: ddbstream.proto
server/: Cargo.toml  build.rs
server/src/: server.rs
server/src/error/: mod.rs
