[package]
name = "server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/server.rs"

[dependencies]
tonic = "0.7"
prost = "0.10"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1", features = ["net"] }
futures = { version = "0.3", default-features = false, features = ["alloc"] }
once_cell = "1.12.0"
aws-config = "0.14.0"
aws-sdk-kinesis = "0.14.0"
aws-sdk-dynamodb = "0.14.0"
aws-types = "0.14.0"
serde = { version = "1.0.81", features = ["derive"] }
serde_json = "1.0.81"

[build-dependencies]
tonic-build = "0.7"